<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:text="@string/pos"
            android:id="@+id/textView12"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:text="@string/equipo"
            android:id="@+id/textView5"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:lines="1"
            android:ellipsize="marquee" />

        <TextView
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:text="@string/pts"
            android:id="@+id/textView6"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/pj"
            android:id="@+id/textView7"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:textSize="20sp"
            android:text="@string/pg"
            android:textStyle="bold" />

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/pe"
            android:id="@+id/textView9"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/pp"
            android:id="@+id/textView10"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/dif"
            android:id="@+id/textView11"
            android:layout_gravity="center|right"
            android:layout_marginLeft="5dp"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/activity_movies_progress"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_gravity="center"
        android:visibility="gone"
        style="?android:attr/progressBarStyleLarge"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/RecyclerView"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>