<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activities.MainActivity"
    android:orientation="horizontal">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/liga"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/arg"
            android:contentDescription="@string/app_name"
            android:layout_width="100dp"
            android:layout_height="100dp" />
        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/coordinar"
            android:id="@+id/coordinar"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:layout_marginTop="10dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calendario"
            android:id="@+id/resultados"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:background="#09ad00"
            android:layout_marginTop="10dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Tabla"
            android:id="@+id/posiciones"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:background="#09ad00"
            android:layout_marginTop="10dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rankings"
            android:id="@+id/rankings"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:background="#09ad00"
            android:layout_marginTop="10dp" />

        <Button
            android:text="@string/Transfers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/transfers"
            android:layout_marginTop="10dp"
            android:textStyle="normal|bold"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>
