<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/equipo1"
            android:src="@drawable/arg"
            android:layout_marginLeft="5dp"
            android:contentDescription="@string/app_name"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vs"
                android:id="@+id/textView"
                android:textSize="40sp"
                android:layout_gravity="center"
                android:layout_alignParentTop="true"
         />


        </RelativeLayout>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/equipo2"
            android:src="@drawable/arg"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/hora"
            android:textSize="20sp"
            android:layout_gravity="center_vertical" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ver"
            android:id="@+id/button"
            android:textColor="#ffffff"
            android:background="@color/colorPrimary" />
    </LinearLayout>

</LinearLayout>